--- a/sfGpsDsAuVic/main/default/lwc/sfGpsDsAuVicFormStepOsN/sfGpsDsAuVicFormStepOsN.css
+++ b/sfGpsDsAuVic/main/default/lwc/sfGpsDsAuVicFormStepOsN/sfGpsDsAuVicFormStepOsN.css
@@ -5,27 +5,13 @@
   display: none;
 }
 
-.form-actions input {
-  margin-top: var(--lwc-spacingXSmall, 0.5rem);
-  margin-bottom: var(--lwc-spacingXSmall, 0.5rem);
-}
-
 .form-actions {
   display: flex;
   flex-direction: column-reverse;
-  padding-right: var(--lwc-spacingSmall, 0.75rem);
+  gap: 0.5rem;
 }
 
 @media (min-width: 992px) {
-  .form-actions input {
-    margin-top: 0;
-    margin-left: 0.5rem;
-  }
-
-  .form-actions input:first-child {
-    margin-left: none;
-  }
-
   .form-actions {
     -webkit-box-pack: end;
     justify-content: flex-end;
